# chess

./: .gitignore
resources/: resource.qrc
src/: CMakeLists.txt  cell.cpp  cell.h  config.h  main.cpp
src/logic/: cell.cpp  cell.h  game_logic.cpp  game_logic.h  game_logic.tpp  piece.cpp  piece.h  player_color.cpp  player_color.h  point.cpp  point.h
src/widgets/: board.cpp  board.h  board_widget.cpp  board_widget.h  cell.cpp  cell.h  piece.cpp  piece.h  piece_promotion_selector.cpp  piece_promotion_selector.h  side_panel.cpp  side_panel.h
src/windows/: game_window.cpp  game_window.h
